@@ -17,6 +17,7 @@ define( function( require ) {
   var Panel = require( 'SUN/Panel' );
   var PhetFont = require( 'SCENERY_PHET/PhetFont' );
   var PHScaleColors = require( 'PH_SCALE/common/PHScaleColors' );
+  var PHScaleConstants = require( 'PH_SCALE/common/PHScaleConstants' );
   var Shape = require( 'KITE/Shape' );
   var SubSupText = require( 'SCENERY_PHET/SubSupText' );
   var Text = require( 'SCENERY/nodes/Text' );
@@ -38,9 +39,9 @@ define( function( require ) {
 
     // 'H3O+/OH- ratio' check box, with color-coded label
     var xSpacing = 6;
-    var textH3O = new SubSupText( 'H<sub>3</sub>O<sup>+</sup>', { font: FONT, fill: PHScaleColors.H3O_MOLECULES } );
+    var textH3O = new SubSupText( PHScaleConstants.H3O_FORMULA, { font: FONT, fill: PHScaleColors.H3O_MOLECULES } );
     var textSlash = new Text( '/', { font: FONT, left: textH3O.right + xSpacing } );
-    var textOH = new SubSupText( 'OH<sup>-</sup>', { font: FONT, fill: PHScaleColors.OH_MOLECULES, left: textSlash.right + xSpacing } );
+    var textOH = new SubSupText( PHScaleConstants.OH_FORMULA, { font: FONT, fill: PHScaleColors.OH_MOLECULES, left: textSlash.right + xSpacing } );
     var textRatio = new Text( ratioString, { font: FONT, left: textOH.right + xSpacing } );
     var ratioLabel = new Node( { children: [ textH3O, textSlash, textOH, textRatio ] } );
     var ratioCheckBox = new CheckBox( ratioLabel, ratioVisibleProperty );
