@@ -14,6 +14,7 @@ define( function( require ) {
   var H2OMoleculeNode = require( 'PH_SCALE/common/view/H2OMoleculeNode' );
   var PhetFont = require( 'SCENERY_PHET/PhetFont' );
   var PHScaleColors = require( 'PH_SCALE/common/PHScaleColors' );
+  var PHScaleConstants = require( 'PH_SCALE/common/PHScaleConstants' );
   var SubSupText = require( 'SCENERY_PHET/SubSupText' );
 
   /**
@@ -32,7 +33,7 @@ define( function( require ) {
 
     GraphIndicator.call( this, valueProperty,
       new H2OMoleculeNode(),
-      new SubSupText( 'H<sub>2</sub>O', { font: new PhetFont( 28 ), fill: 'white' } ),
+      new SubSupText( PHScaleConstants.H2O_FORMULA, { font: new PhetFont( 28 ), fill: 'white' } ),
       options );
   }
 
